--- a/.github/workflows/ci_cd_pipe_line.yml
+++ b/.github/workflows/ci_cd_pipe_line.yml
@@ -157,6 +157,14 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
+      # Set Current Date As Env Variable
+      - name: Set current date as env variable
+        run: echo "date_today=$(date +'%Y-%m-%d')" >> $GITHUB_ENV
+
+      # Set Repository Name As Env Variable
+      - name: Set repository name as env variable
+        run: echo "repository_name=$(echo '${{ github.repository }}' | awk -F '/' '{print $2}')" >> $GITHUB_ENV
+
       - name: set up JDK 17
         uses: actions/setup-java@v3
         with:
