--- a/.github/workflows/ci_cd_pipe_line.yml
+++ b/.github/workflows/ci_cd_pipe_line.yml
@@ -51,7 +51,12 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-
+      - name: set up JDK 17
+        uses: actions/setup-java@v3
+        with:
+          java-version: '17'
+          distribution: 'temurin'
+          cache: gradle
       - name: Run Unit Test
         run: ./gradlew test
 
@@ -68,7 +73,12 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-
+      - name: set up JDK 17
+        uses: actions/setup-java@v3
+        with:
+          java-version: '17'
+          distribution: 'temurin'
+          cache: gradle
       - name: run instrumentation tests
         uses: reactivecircus/android-emulator-runner@v2
         with:
