--- a/.github/workflows/ci_cd_pipe_line.yml
+++ b/.github/workflows/ci_cd_pipe_line.yml
@@ -13,62 +13,62 @@ on:
   workflow_dispatch:
 
 jobs:
-  lint:
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-
-      # Set Current Date As Env Variable
-      - name: Set current date as env variable
-        run: echo "date_today=$(date +'%Y-%m-%d')" >> $GITHUB_ENV
-
-      # Set Repository Name As Env Variable
-      - name: Set repository name as env variable
-        run: echo "repository_name=$(echo '${{ github.repository }}' | awk -F '/' '{print $2}')" >> $GITHUB_ENV
-
-      - name: set up JDK 17
-        uses: actions/setup-java@v3
-        with:
-          java-version: '17'
-          distribution: 'temurin'
-          cache: gradle
-
-      - name: Run List Check
-        run: ./gradlew lintDebug
-
-      - name: Upload Lint Debug html Report
-        uses: actions/upload-artifact@v3
-        with:
-          name: lint.html
-          path: ./app/build/reports/lint-results-debug.html
-
-  unit-test:
-    runs-on: ubuntu-latest
-    needs: [ lint ]
-
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-      - name: set up JDK 17
-        uses: actions/setup-java@v3
-        with:
-          java-version: '17'
-          distribution: 'temurin'
-          cache: gradle
-      - name: Run Unit Test
-        run: ./gradlew test
-
-      - name: Upload Unit Test Report
-        uses: actions/upload-artifact@v3
-        with:
-          name: unit_test_report
-          path: ./app/build/reports/tests/testDebugUnitTest
+#  lint:
+#    runs-on: ubuntu-latest
+#
+#    steps:
+#      - name: Checkout
+#        uses: actions/checkout@v3
+#
+#      # Set Current Date As Env Variable
+#      - name: Set current date as env variable
+#        run: echo "date_today=$(date +'%Y-%m-%d')" >> $GITHUB_ENV
+#
+#      # Set Repository Name As Env Variable
+#      - name: Set repository name as env variable
+#        run: echo "repository_name=$(echo '${{ github.repository }}' | awk -F '/' '{print $2}')" >> $GITHUB_ENV
+#
+#      - name: set up JDK 17
+#        uses: actions/setup-java@v3
+#        with:
+#          java-version: '17'
+#          distribution: 'temurin'
+#          cache: gradle
+#
+#      - name: Run List Check
+#        run: ./gradlew lintDebug
+#
+#      - name: Upload Lint Debug html Report
+#        uses: actions/upload-artifact@v3
+#        with:
+#          name: lint.html
+#          path: ./app/build/reports/lint-results-debug.html
+#
+#  unit-test:
+#    runs-on: ubuntu-latest
+#    needs: [ lint ]
+#
+#    steps:
+#      - name: Checkout
+#        uses: actions/checkout@v3
+#      - name: set up JDK 17
+#        uses: actions/setup-java@v3
+#        with:
+#          java-version: '17'
+#          distribution: 'temurin'
+#          cache: gradle
+#      - name: Run Unit Test
+#        run: ./gradlew test
+#
+#      - name: Upload Unit Test Report
+#        uses: actions/upload-artifact@v3
+#        with:
+#          name: unit_test_report
+#          path: ./app/build/reports/tests/testDebugUnitTest
 
   instrumentation-test:
-    runs-on: macos
-    needs: [ unit-test ]
+    runs-on: macos-11.0
+#    needs: [ unit-test ]
 
     steps:
       - name: Checkout
