emulator-build: 7425822 id added for instrumentation test

--- a/.github/workflows/ci_cd_pipe_line.yml
+++ b/.github/workflows/ci_cd_pipe_line.yml
@@ -82,7 +82,8 @@ jobs:
       - name: run instrumentation tests
         uses: reactivecircus/android-emulator-runner@v2
         with:
-          api-level: 33
+          api-level: 29
+          emulator-build: 7425822
           script: ./gradlew connectedCheck
 
       - name: Upload instrumentation test report
