--- a/.github/workflows/ci_cd_pipe_line.yml
+++ b/.github/workflows/ci_cd_pipe_line.yml
@@ -83,7 +83,7 @@ jobs:
         uses: reactivecircus/android-emulator-runner@v2
         with:
           api-level: 29
-          emulator-build: 7425822
+          emulator-build: 5554
           script: ./gradlew connectedCheck
 
       - name: Upload instrumentation test report
